src/test/resources/etapa4/failing/wrongTypeChainVarAssign.ru
/? Asigna un valor de tipo incorrecto a una variable encadenada

struct A{
    Bool h;
    B beto;
}

impl A {
    .(){}

    fn met2() -> Int {
        beto.a.h = 3;
    }
}

struct B {
    Str x,z;
    A a;
}

impl B {
    .(){}
    fn met1(Int a) -> Int {
        a = ++6;
    }
}


start {}